Fixed unwanted input & select styling in webkit based browsers. Fixed flip-button sizing issue on safari. Replaced standard select dropdown arrow with custom design.

--- a/src/index.scss
+++ b/src/index.scss
@@ -63,7 +63,9 @@ body {
   form {
     align-self: center;
     display: flex;
+    height: fit-content;
     .rows {
+      height: 100%;
       .row {
         display: flex;
         &:first-of-type {
@@ -81,6 +83,7 @@ body {
           border-radius: 6px;
           border: 1px solid #dfe1e5;
           margin-right: 10px;
+          -webkit-appearance: none;
           &::-webkit-outer-spin-button,
           &::-webkit-inner-spin-button {
             -webkit-appearance: none;
@@ -92,13 +95,30 @@ body {
         }
         select {
           padding: 5px;
+          padding-left: 15px;
           width: 100px;
-          line-height: 28px;
+          line-height: 25px;
           border-radius: 6px;
           border: 1px solid #dfe1e5;
           height: 38px;
-          font-size: 13px;
+          color: rgb(43, 43, 43);
+          font-size: 14px;
+          font-weight: 600;
           align-self: center;
+          -webkit-appearance: none;
+          -moz-appearance: none;
+          background: white;
+          background-image: linear-gradient(
+              45deg,
+              transparent 50%,
+              rgb(80, 80, 82) 50%
+            ),
+            linear-gradient(135deg, rgb(80, 80, 82) 50%, transparent 50%),
+            linear-gradient(to right, #dfe1e5, #dfe1e5);
+          background-position: calc(100% - 12px) calc(1em + 2px),
+            calc(100% - 7px) calc(1em + 2px), 100% 0;
+          background-size: 5px 5px, 5px 5px, 25% 100%;
+          background-repeat: no-repeat;
           &:hover {
             cursor: pointer;
           }
@@ -114,6 +134,7 @@ body {
       align-self: center;
       font-size: 1.5em;
       height: 100%;
+      max-height: 100%;
       padding: 5px 20px;
       &:hover {
         box-shadow: 0 1px 2px rgba(0, 0, 0, 0.08), 0 1px 2px rgba(0, 0, 0, 0.14);
